<resources>
    <string name="app_name">Luke</string>
    <string name="Application_ID">31874f984748c55e354a4af8b8491221</string>
    <string name="action_settings">Settings</string>
    <string name="login_main_title">LOGIN</string>
    <string name="login_main_et_username">手机号</string>
    <string name="login_main_et_email">找回密码的邮箱</string>
    <string name="login_main_et_password">密码</string>
    <string name="login_main_et_checkpwd">请再次输入密码</string>
    <string name="login_main_bt_login">登 陆</string>
    <string name="login_main_tv_forget">忘记密码？</string>
    <string name="login_reset_pwd">完 成</string>
    <string name="login_reset_newpwd">新密码</string>
    <string name="login_forget_verification">请输入验证码</string>
    <string name="login_forget_getcode">获取验证码</string>
    <string name="login_main_tv_register">新用户注册</string>
    <string name="login_register_tv_register">注 册</string>
    <string name="login_register_title">REGISTER</string>
    <string name="login_main_tv_text">- - - - - -社交账号直接登陆- - - - - -</string>
    <string name="login_register_repeat_password">确认密码</string>
    <string name="login_register_bt_register">注 册</string>
    <string name="item_me_appbar_title">我的</string>
    <string name="home_title_news">最新</string>
    <string name="home_title_sun">叫早</string>
    <string name="home_title_moon">哄睡</string>
    <string name="home_title_sapling">0~2岁</string>
    <string name="home_title_more">分类</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
</resources>
