<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_home_news"
        android:background="@drawable/selector_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_home_title_icon"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/icon_home_stars"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textSize="@dimen/activity_home_title_text"
            android:text="@string/home_title_news"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_home_sun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/selector_white"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_home_title_icon"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/icon_home_sun"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textSize="@dimen/activity_home_title_text"
            android:text="@string/home_title_sun"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_home_moon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/selector_white"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_home_title_icon"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/icon_home_moon"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textSize="@dimen/activity_home_title_text"
            android:text="@string/home_title_moon"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_home_sapling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/selector_white"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_home_title_icon"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/icon_home_sapling"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textSize="@dimen/activity_home_title_text"
            android:text="@string/home_title_sapling"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_home_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/selector_white"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_home_title_icon"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/icon_home_more"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textSize="@dimen/activity_home_title_text"
            android:text="@string/home_title_more"/>
    </LinearLayout>
</LinearLayout>
