<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@drawable/login_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="50dp"
            android:text="@string/login_register_title"
            android:textColor="@color/login_line_gray"
            android:textSize="40dp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/btn_back"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/activity_close"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:paddingEnd="30dp"
        android:paddingStart="30dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="#c5c5c5"
            >

            <EditText
                android:id="@+id/et_register_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/selector_bg_edit_2"
                android:hint="@string/login_main_et_username"
                android:inputType="textPersonName"
                android:paddingBottom="2dp"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/bg_input_cursor"
                android:textSize="18sp"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="#c5c5c5"
            >

            <EditText
                android:id="@+id/et_register_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/selector_bg_edit_2"
                android:hint="@string/login_main_et_password"
                android:inputType="textPassword"
                android:paddingBottom="2dp"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/bg_input_cursor"
                android:textSize="18sp"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="#c5c5c5"
            >

            <EditText
                android:id="@+id/et_check_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/selector_bg_edit_2"
                android:hint="@string/login_main_et_checkpwd"
                android:inputType="textPassword"
                android:paddingBottom="2dp"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/bg_input_cursor"
                android:textSize="18sp"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/login_btn_stype"
        android:text="@string/login_register_tv_register"
        android:textColor="#fff"
        android:textSize="18sp"
        android:layout_below="@+id/fl_password"
        android:layout_alignParentStart="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout6"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="7dp"
            android:gravity="center"
            android:text="@string/login_main_tv_text"
            android:textColor="@color/login_line_gray"
            android:textSize="15sp"/>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_login_weibo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:src="@mipmap/icon_weibo"/>

            <ImageView
                android:id="@+id/iv_login_qq"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:src="@mipmap/icon_qq"/>

            <ImageView
                android:id="@+id/iv_login_weixin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:src="@mipmap/icon_weixin"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
